--- a/style.css
+++ b/style.css
@@ -1,22 +1,20 @@
-.img{
-    display: block;
-    margin: 0 auto;
+input {
+display: block;
+margin: 10px;
+height: 20px;
 }
-input[type="number"]{
-    background-color: rgb(173, 207, 207);
-}
-input[type="submit"]{
-    margin-top: 20px;
-    font-family: sans-serif;
-}
-
-
-h3
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: rgb(14, 100, 100);
-}
-h1 {
+h1{
     text-align: center;
-    color: dimgrey;
+    color: rgb(212, 156, 86);
 }
+label{
+    color: black;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 1000;
+}
+table {
+    border: 3px solid purple;
+}
+
+
+
